[gd_scene load_steps=69 format=2]

[ext_resource path="res://RINGM___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://map.png" type="Texture" id=3]
[ext_resource path="res://Music.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Ring/0002.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Ring/0001.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Ring/0004.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Ring/0006.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Ring/0009.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Ring/0011.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Ring/0013.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Ring/0016.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Ring/0007.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Ring/0018.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Ring/0010.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Ring/0015.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Ring/0005.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Ring/0008.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Ring/0017.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Ring/0014.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Ring/0012.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Ring/0003.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Ring/0028.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Ring/0038.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Ring/0029.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Ring/0019.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Ring/0020.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Ring/0031.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Ring/0032.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Ring/0033.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Ring/0025.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Ring/0026.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Ring/0035.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Ring/0034.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Ring/0036.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Ring/0039.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Ring/0021.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Ring/0037.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Ring/0023.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Ring/0022.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Ring/0024.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Ring/0027.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Ring/0030.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Ring/0041.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Ring/0045.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Ring/0046.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Ring/0047.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Ring/0043.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Ring/0042.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Ring/0048.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Ring/0049.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Ring/0044.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Ring/0040.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Ring/0052.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Ring/0057.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Ring/0058.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Ring/0059.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Ring/0050.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Ring/0051.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Ring/0060.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Ring/0053.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Ring/0055.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Ring/0056.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Ring/0054.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Paper.jpg" type="Texture" id=65]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 22 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 37 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 42 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 43 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 24 ), ExtResource( 36 ), ExtResource( 53 ), ExtResource( 44 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 61 ), ExtResource( 64 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 60 ) ],
"loop": true,
"name": "spin",
"speed": 60.0
} ]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ring" type="AnimatedSprite" parent="."]
position = Vector2( 122.672, 97.8182 )
frames = SubResource( 3 )
animation = "spin"
frame = 29
playing = true

[node name="Interface" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper2" type="Sprite" parent="Interface"]
position = Vector2( 959.664, 1604.11 )
rotation = 1.5708
scale = Vector2( 1.8855, 1.8855 )
texture = ExtResource( 65 )

[node name="Answer" type="Button" parent="Interface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -350.0
margin_right = 150.0
margin_bottom = -200.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Répondre"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapMini" type="Sprite" parent="Interface"]
position = Vector2( 1819.38, 674.981 )
scale = Vector2( 0.570866, 0.570866 )
texture = ExtResource( 3 )

[node name="DisplayMap" type="Button" parent="Interface"]
margin_left = 1457.0
margin_top = 513.0
margin_right = 1922.0
margin_bottom = 836.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Button" parent="Interface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1100.0
margin_top = -200.0
margin_right = 1100.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Bienvenue à la chasse au trésor (flèche de droite pour continuer)"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="Interface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 200.0
focus_mode = 0
enabled_focus_mode = 0
text = "<"
flat = true

[node name="Right" type="Button" parent="Interface"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
focus_mode = 0
enabled_focus_mode = 0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 68.0
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndiceArea" type="Control" parent="Interface"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="Sprite" parent="Interface/IndiceArea"]
position = Vector2( 980.987, 424.9 )
rotation = 4.71239
scale = Vector2( 0.715411, 1.67676 )
texture = ExtResource( 65 )

[node name="Text" type="Label" parent="Interface/IndiceArea"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = 130.0
margin_right = 1820.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( -1.17938, 13.8677 )
text = "Aucun indice disponible"

[node name="Exit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 141.0
focus_mode = 0
enabled_focus_mode = 0
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveAnswer" type="LineEdit" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 20.0
caret_blink = true

[node name="ValidAnswer" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 250.0
margin_top = -200.0
margin_right = 500.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "OK"
flat = true

[node name="ClearAnswer" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -200.0
margin_right = -250.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "CLR"
flat = true

[node name="CheckAnswer" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -300.0
margin_right = 550.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="CheckBox" type="CheckBox" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -350.0
margin_right = -150.0
margin_bottom = 76.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Chasse aux trésors
Tolkien"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 502.71 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 3 )

[node name="DisableInterface" type="Button" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Difficulty" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.253
margin_top = -189.841
margin_right = 130.747
margin_bottom = -121.841
text = "Difficulté:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Child" type="Button" parent="Difficulty"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 221.0
focus_mode = 0
enabled_focus_mode = 0
text = "Enfant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adult" type="Button" parent="Difficulty"]
margin_top = 246.688
margin_right = 300.0
margin_bottom = 389.688
focus_mode = 0
enabled_focus_mode = 0
text = "Adulte"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Interface/Answer" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="Interface/DisplayMap" to="." method="_on_DisplayMap_pressed"]
[connection signal="button_down" from="Interface/Instruction" to="." method="_on_Instruction_button_down"]
[connection signal="pressed" from="Interface/Instruction" to="." method="_on_Instruction_pressed"]
[connection signal="pressed" from="Interface/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Interface/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ValidAnswer" to="." method="_on_ValidAnswer_pressed"]
[connection signal="pressed" from="ClearAnswer" to="." method="_on_ClearAnswer_pressed"]
[connection signal="pressed" from="CheckAnswer" to="." method="_on_CheckAnswer_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="DisableInterface" to="." method="_on_DisableInterface_pressed"]
[connection signal="pressed" from="Difficulty/Child" to="." method="_on_Child_pressed"]
[connection signal="pressed" from="Difficulty/Adult" to="." method="_on_Adult_pressed"]
